Added shapes to hero and from sections.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,22 @@
           </li>
         </ul>
       </nav>
+      <div class="hero-square">
+        <img src="images/pink-yellow-square-hero.png" alt="">
+      </div>
     </header>
-    <section class="hero container">
-      <h1>Design & Code<br />Conference</h1>
-      <p class="hero-text">Toronto, Canada May 24-25, 2022</p>
-      <a href="" class="btn">Register</a>
+    <section class="hero"> 
+      <div class="hero-content">
+        <h1>Design & Code<br />Conference</h1>
+        <p class="date">Toronto, Canada May 24-25, 2022</p>
+        <a href="" class="btn">Register</a>
+      </div>
+      <div class="hero-triangle">
+        <img src="images/purple-blue-triangle.png" alt="">
+      </div>
+      <div class="hero-circle">
+        <img src="images/green-blue-circle.png" alt="">
+      </div>
     </section>
     <main>
       <section class="about container">
@@ -63,7 +74,7 @@
         </div>
       </section>
       <section class="speakers container">
-        <h2 class="temp">Speakers</h2>
+        <h2 class="section__heading">Speakers</h2>
         <div class="grid grid-cols--4">
           <div class="speaker-profile-wrap">
             <div class="speaker pink-yellow">
@@ -215,7 +226,7 @@
           </div>
       </section>
       <section class="agenda container">
-        <h2 class="temp">Agenda</h2>
+        <h2 class="section__heading">Agenda</h2>
         <div class="agenda__day-one">
           <h2 class="agenda__heading">Wednesday</h2>
           <div class="grid grid-cols--2 green-black container-padding">
@@ -350,14 +361,25 @@
             <label for="">Credit Card</label>
             <input type="text">
           </div>
-          <a href="" class="btn btn-margin" >Register</a>
+          <div class="input-wrap">
+            <a href="" class="btn btn-margin" >Register</a>
+          </div>
+          <div class="triangle-form">
+            <img class="triangle-form__image" src="images/purple-blue-triangle-form.png" alt="">
+          </div>
+          <div class="square-form">
+            <img class="square-form__image" src="images/pink-yellow-square-form.png" alt="">
+          </div>
+          <div class="circle-form">
+            <img class="circle-form__image" src="images/green-blue-circle-form.png" alt="">
+          </div>
         </form>
 
       </section>
       <footer class="footer">
         <div class="container">
           <div class="footer-items">
-            <p class="copyright">&copy 2021</p>
+            <p class="copyright">&copy 2021 Design & Code Conference</p>
             <div class="social-footer-wrap">
               <p class="social-icons-caption">Follow us:</p>
               <div class="social-icons">
