--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="speaker__info">
               <div class="speaker__info-wrap">
                 <p class="speaker__name">Nadia Sayed</p>
-                <p class="speaker__title">SVP Product & Design</p>
+                <p class="speaker__title">Senior Vice President</p>
               </div>
               <svg class="icon-company">
                 <use xlink:href="images/sprite.svg#google"></use>
@@ -125,7 +125,7 @@
             <div class="speaker__info">
               <div class="speaker__info-wrap">
                 <p class="speaker__name">Matthew Harper</p>
-                <p class="speaker__title">SVP Product & Design</p>
+                <p class="speaker__title">Senior Vice President</p>
               </div>
               <svg class="icon-company">
                 <use xlink:href="images/sprite.svg#apple"></use>
@@ -145,7 +145,7 @@
             <div class="speaker__info">
               <div class="speaker__info-wrap">
                 <p class="speaker__name">Nick Jensen</p>
-                <p class="speaker__title">SVP Product & Design</p>
+                <p class="speaker__title">Senior Vice President</p>
               </div>
               <svg class="icon-company">
                 <use xlink:href="images/sprite.svg#adobe"></use>
@@ -163,7 +163,7 @@
             <div class="speaker__info">
               <div class="speaker__info-wrap">
                 <p class="speaker__name">Olivia Jones</p>
-                <p class="speaker__title">SVP Product & Design</p>
+                <p class="speaker__title">Senior Vice President</p>
               </div>
               <svg class="icon-company">
                 <use xlink:href="images/sprite.svg#amazon"></use>
@@ -181,7 +181,7 @@
             <div class="speaker__info">
               <div class="speaker__info-wrap">
                 <p class="speaker__name">Chris Colson</p>
-                <p class="speaker__title">SVP Product & Design</p>
+                <p class="speaker__title">Senior Vice President</p>
               </div>
               <svg class="icon-company">
                 <use xlink:href="images/sprite.svg#figma"></use>
@@ -199,7 +199,7 @@
             <div class="speaker__info">
               <div class="speaker__info-wrap">
                 <p class="speaker__name">Sherri Lee</p>
-                <p class="speaker__title">SVP Product & Design</p>
+                <p class="speaker__title">Senior Vice President</p>
               </div>
               <svg class="icon-company">
                 <use xlink:href="images/sprite.svg#microsoft"></use>
@@ -217,7 +217,7 @@
             <div class="speaker__info">
               <div class="speaker__info-wrap">
                 <p class="speaker__name">Mark Patel</p>
-                <p class="speaker__title">SVP Product & Design</p>
+                <p class="speaker__title">Senior Vice President</p>
               </div>
               <svg class="icon-company">
                 <use xlink:href="images/sprite.svg#netflix"></use>
@@ -237,8 +237,8 @@
               <span style="font-weight: 700">
                 <p>Keynote:</p>
               </span>
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>Google's Process for Designing and Creating Customer-Centric Products</p>
+              <p>Nadia Sayed, Senior Vice President, Google</p>
             </div>
           </div>
           <div class="grid grid-cols--2 white-black container-padding">
@@ -246,8 +246,8 @@
               <p>10:00am</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>Cutting Edge Solutions fro Improving Your Design and Development Process</p>
+              <p>Mark Patel, Senior Vice President, Netflix</p>
             </div>
           </div>
           <div class="grid grid-cols--2 white-black container-padding">
@@ -255,8 +255,8 @@
               <p>11:00am</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>The Future of E-commerce Design and Development</p>
+              <p>Jennifer Rodriguez, Senior Vice President, Shopify</p>
             </div>
           </div>
           <div class="grid grid-cols--2 container-padding">
@@ -272,8 +272,8 @@
               <p>2:00pm</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>How to Create a Design System that Optimizes Your Development Process</p>
+              <p>Chris Colson, Senior Vice President, Figma</p>
             </div>
           </div>
           <div class="grid grid-cols--2 white-black container-padding">
@@ -281,8 +281,8 @@
               <p>3:00pm</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>UI Design for Developers</p>
+              <p>Nick Jensen, Senior Vice President, Adobe</p>
             </div>
           </div>
         </div>
@@ -296,8 +296,8 @@
               <span style="font-weight: 700">
                 <p>Keynote:</p>
               </span>
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>Optimal Ways to Structure Your Career as a Designer and Developer</p>
+              <p>Matthew Harper, Senior Vice President, Apple</p>
             </div>
           </div>
           <div class="grid grid-cols--2 white-black container-padding">
@@ -305,8 +305,8 @@
               <p>10:00am</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>Cutting Edge Solutions to Your Design and Development Process</p>
+              <p>Olivia Jones, Senior Vice President, Amazon</p>
             </div>
           </div>
           <div class="grid grid-cols--2 white-black container-padding">
@@ -314,8 +314,8 @@
               <p>11:00am</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>Best Practices for Running Design Sprints in Your Organization</p>
+              <p>Sherri Lee, Senior Vice President, Microsoft</p>
             </div>
           </div>
           <div class="grid grid-cols--2 container-padding">
@@ -331,8 +331,8 @@
               <p>2:00pm</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>Building Flexible Components</p>
+              <p>Nick Jensen, Senior Vice President, Adobe</p>
             </div>
           </div>
           <div class="grid grid-cols--2 white-black container-padding">
@@ -340,8 +340,8 @@
               <p>3:00pm</p>
             </span>
             <div class="session-content">
-              <p>How to Create a Design System</p>
-              <p>Joe Black</p>
+              <p>Modern Approach for Designing With Code</p>
+              <p>Chris Colson, Senior Vice President, Figma</p>
             </div>
           </div>
         </div>
