--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <header>
       <nav class="nav collapsible">
         <a href="#"
-          ><svg class="icon-company">
-            <use xlink:href="images/sprite.svg#logo"></use></svg
-        ></a>
+          ></a>
         <svg class="icon-social nav__toggler">
           <use xlink:href="images/sprite.svg#hamburger-menu"></use>
         </svg>
@@ -52,7 +50,7 @@
       <section class="about container">
         <div class="grid about-grid">
           <div class="content">
-            <h2 class="center">About</h2>
+            <h2 class="section__heading">About</h2>
             <p class="word-wrap">
               Our Design and Code Conference returns in-person to Toronto next
               spring. Join us for an action-packed two days as we discuss how to
@@ -64,8 +62,8 @@
               src="images/conference_200.jpg"
               srcset="
                 images/conference_200.jpg  200w,
-                images/conference_812.jpg  812w,
-                images/conference_1200.jpg 1200w,
+                images/conference_941.jpg  941w,
+                images/conference_1400.jpg 1400w,
               "
               alt=""
               class="img"
@@ -347,22 +345,22 @@
         </div>
       </section>
       <section class="register container">
-        <h2 class="temp">Register</h2>
+        <h2 class="section__heading">Register</h2>
         <form action="" class="form">
           <div class="input-wrap">
             <label for="">Name</label>
-            <input type="text">
+            <input type="text" placeholder="Name">
           </div>
           <div class="input-wrap">
             <label for="">Email</label>
-            <input type="email">
+            <input type="email" placeholder="Email">
           </div>
           <div class="input-wrap">
             <label for="">Credit Card</label>
-            <input type="text">
+            <input type="text" placeholder="Credit Card">
           </div>
           <div class="input-wrap">
-            <a href="" class="btn btn-margin" >Register</a>
+            <a href="" class="btn btn--text-large" >Register</a>
           </div>
           <div class="triangle-form">
             <img class="triangle-form__image" src="images/purple-blue-triangle-form.png" alt="">
