--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <use xlink:href="images/sprite.svg#hamburger-menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
-          <li class="nav__item"><a href="">About</a></li>
-          <li class="nav__item"><a href="">Speakers</a></li>
-          <li class="nav__item"><a href="">Agenda</a></li>
+          <li class="nav__item"><a href="#about-section">About</a></li>
+          <li class="nav__item"><a href="#speakers-section">Speakers</a></li>
+          <li class="nav__item"><a href="#agenda-section">Agenda</a></li>
           <li class="nav__item">
-            <a href=""><div class="btn">Register</div></a>
+            <a href="#register-section"><div class="btn">Register</div></a>
           </li>
         </ul>
       </nav>
@@ -47,7 +47,7 @@
       </div>
     </section>
     <main>
-      <section class="about container">
+      <section id="about-section" class="about container">
         <div class="grid about-grid">
           <div class="content">
             <h2 class="section__heading">About</h2>
@@ -71,7 +71,7 @@
           </div>
         </div>
       </section>
-      <section class="speakers container">
+      <section id="speakers-section" class="speakers container">
         <h2 class="section__heading">Speakers</h2>
         <div class="grid grid-cols--4">
           <div class="speaker-profile-wrap">
@@ -223,7 +223,7 @@
             </div>
           </div>
       </section>
-      <section class="agenda container">
+      <section id="agenda-section" class="agenda container">
         <h2 class="section__heading">Agenda</h2>
         <div class="agenda__day-one">
           <h2 class="agenda__heading">Wednesday</h2>
@@ -344,7 +344,7 @@
           </div>
         </div>
       </section>
-      <section class="register container">
+      <section id="register-section" class="register container">
         <h2 class="section__heading">Register</h2>
         <form action="" class="form">
           <div class="input-wrap">
