--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script src="js/main.js" defer></script>
   </head>
   <body>
     <header>
@@ -412,6 +413,5 @@
         </div>
       </footer>
     </main>
-    <script src="js/main.js"></script>
   </body>
 </html>
