Hid the square in the header at 1000px.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="hero"> 
       <div class="hero-content">
         <h1>Design & Code<br />Conference</h1>
-        <p class="date">Toronto, Canada May 24-25, 2022</p>
+        <p class="date">November 16 - 17, 2023 </p>
         <a href="" class="btn">Register</a>
       </div>
       <div class="hero-triangle">
