Added animation on page scroll. Up and down.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <script src="js/main.js" defer></script>
+    <script src="js/animation.js" defer></script>
   </head>
   <body>
     <header>
